<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/first_title"
        android:text="@string/succ_ratio_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple" />

    <TextView
        style="@style/title"
        android:text="@string/event_test_step_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />

    <TextView
        style="@style/title"
        android:text="@string/user_time_test_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/timesEt"/>

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:id="@+id/showTv" />

</LinearLayout>
