<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eebbk.behavior.demo.demonstration.EventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:text="@string/stress_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStressTest"/>

        <Button
            android:text="@string/use_time_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUseTimeTest"/>

        <Button
            android:text="@string/succ_ratio_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSuccRatioTest"/>

        <Button
            android:text="@string/large_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLargeChar"/>

    </LinearLayout>
</ScrollView>

