<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/first_title"
        android:text="@string/page_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple" />

    <TextView
        style="@style/title"
        android:text="@string/page_test_enter_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterTimeTv"
        android:textColor="@color/colorAccent"/>

    <TextView
        style="@style/title"
        android:text="@string/page_test_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentTimeTv"
        android:textColor="@color/colorAccent" />
</LinearLayout>
